--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Radio+Canada:wght@500&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Radio Canada', sans-serif;
 }
 
 code {
@@ -19,7 +22,6 @@ code {
   color: white !important;
 }
 
-
 .navbar-brand{
   color: white !important;
 }
@@ -29,10 +31,31 @@ code {
 }
 
 .smallimg{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 50px ;
   height: 200px;
   width: 100% !important;
 
 }
+.btn{
+  background-color: black !important;
+  color: white !important;
+  box-shadow: none !important;
+  border: none;
+  margin-bottom: 10px !important;
+  border-radius: 40px ;
+} 
+
 .row{
   margin-left: auto !important;
+  border-radius: 50px ;  
+}
+h1{
+  font-size: 30px ;
+}
+.bx_shadow{
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  margin-top: 30px;
+  padding: 15px;
 }
