--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,7 +16,7 @@ code {
 }
 
 .navbar{
-  background-color: black !important;
+  background-color: #0f1763 !important;
 }
 .nav-link{
   color: white !important;
@@ -39,13 +39,14 @@ code {
 
 }
 .room_btn{
-  background-color: black !important;
+  background-color: #0f1763 !important;
   color: white !important;
   box-shadow: none !important;
-  border: none;
+  border:none;
   margin-bottom: 10px !important;
   border-radius: 40px ;
   font-size: 20px; 
+  padding: 5px 15px;
 } 
 
 .row{
@@ -56,6 +57,12 @@ code {
 h1{
   text-align: center;
   font-size: 30px ;
+  font-weight: bold !important;
+}
+
+input{
+  margin-bottom: 15px;
+  border: 1px solid #0f1763 !important;
 }
 
 .fullsizeimg{
