--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,10 +24,12 @@ code {
 
 .navbar-brand{
   color: white !important;
+  justify-content: center;
 }
 
 .navbar-nav{
   margin-left: auto !important;
+ 
 }
 
 .smallimg{
