--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,9 +62,14 @@ h1{
   font-weight: bold !important;
 }
 
-input{
+input, select, .ant-picker{
+  text-align: center;
   margin-bottom: 15px;
-  border: 1px solid #0f1763 !important;
+  border: 2px solid #0f1763 !important;
+  border-radius: 3px;
+  width: 100%;
+  height: 100%;
+  font-weight: bold;
 }
 
 .fullsizeimg{
@@ -82,4 +87,8 @@ input{
 .modal-content  {
   border-radius: 50px; 
   padding: 10px;
+}
+
+.ant-picker-input input{
+  border: none !important;
 }
