--- a/client/src/index.css
+++ b/client/src/index.css
@@ -72,11 +72,12 @@ input, select, .ant-picker{
   width: 100%;
   height: 100%;
   font-weight: bold;
+  margin-bottom: 5px !important;
 }
 
 .fullsizeimg{
   height: 600px;
-  width: 10%;
+  width: 100%;
   border-radius: 30px !important;
 }
 p{
