--- a/client/src/index.css
+++ b/client/src/index.css
@@ -121,6 +121,18 @@ input, select, .ant-picker{
   margin-bottom: 5px !important;
 }
 
+.input2{
+  text-align: center;
+  margin-bottom: 15px;
+  border: 2px solid #0f1763 !important;
+  border-radius: 3px;
+  width: 50%;
+  height: 100%;
+  font-weight: bold;
+  margin-bottom: 5px !important;
+  margin-right: 10px;
+}
+
 .fullsizeimg{
   height: 600px;
   width: 100%;
