--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,7 +14,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.centered{
+  text-align: center;  
 
+}
 .navbar{
   background-color: #0f1763 !important;
 }
@@ -78,16 +81,12 @@ code {
   color: white !important;
   box-shadow: none !important;
   border:none;
-  margin-bottom: 0px !important;
-  margin-left: 10px;
   border-radius: 40px ;
   font-size: 15px; 
   padding: 5px 15px;
   text-align: center;
-  margin: 0;
-  position: absolute;
-  top: 23%;
-  right: 25%;
+  margin-top: 5px !important;
+
 } 
 
 .row{
@@ -108,7 +107,14 @@ h1{
   width: 100%;
   height: 20%;
   font-weight: bold;
-  margin-bottom: 5px !important;
+}
+.new-room-input2{
+  text-align: center;
+  border: 2px solid #0f1763 !important;
+  border-radius: 3px;
+  width: 100%;
+  height: 20%;
+  margin-bottom: 0px !important;
 }
 input, select, .ant-picker{
   text-align: center;
@@ -141,8 +147,17 @@ input, select, .ant-picker{
 p{
   font-size: 20px !important;
 }
+
 .p_home{
   font-size: 20px !important;
+}
+.p_home2{
+  font-size: 14px !important;
+  text-align: justify;
+  text-justify: inter-word;
+}
+.imageHomescreen{
+  margin-top: 8%;
 }
 .bx_shadow{
   box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
